--- a/assets/translations/id.json
+++ b/assets/translations/id.json
@@ -3,7 +3,6 @@
    "home_title": "Beranda",
    "scan_penyakit_padi": "Scan Penyakit Padi",
    "scan_terakhir": "Scan Terakhir",
-   "kunyit": "Kunyit",
    "setting": "Pengaturan",
    "konfirmasi": "Konfirmasi",
    "yakin_ubah_bahasa": "Apakah Anda yakin ingin mengubah bahasa?",
@@ -16,13 +15,33 @@
    "hapus_riwayat": "Hapus Riwayat",
    "konfirmasi_hapus": "Apakah Anda yakin ingin menghapus item ini?",
    "hapus": "Hapus",
-   "scan_blast": "Scan Blast (Penyakit Patah Leher)",
-   "scan_turgo": "Scan Tungro",
-   "scan_bercak": "Scan Bercak Cokelat Daun (Narrow Brown Spot)",
-   "hawar_daun_bakteri_info": "Hawar daun bakteri adalah penyakit yang menyerang daun dan menyebabkan bercak-bercak coklat hingga kerusakan jaringan.",
-   "blast_info": "Blast adalah penyakit jamur yang menyerang tanaman padi dengan gejala bercak-bercak pada daun.",
    "unknown_disease_info": "Penyakit tidak dikenali. Silakan coba gambar lain atau hubungi ahli pertanian.",
    "appBarTitle": "Hasil Deteksi Penyakit",
    "detectedDisease": "Penyakit yang terdeteksi",
-   "finishButton": "Selesai"
+   "finishButton": "Selesai",
+   "data_penyakit": "Data Penyakit",
+   "bacterial_leaf_blight": {
+      "nama": "Bacterial Leaf Llight",
+      "deskripsi": "Bacterial leaf blight disebabkan oleh bakteri (Xanthomonas oryzae) pv. (oryzae) dan merupakan salah satu penyakit paling merusak pada tanaman padi. Gejalanya berupa garis kuning di tepi daun yang cepat meluas menjadi bercak nekrotik berwarna coklat. Penyakit ini umumnya menyebar melalui air hujan, percikan air, serta alat pertanian yang terkontaminasi. Kondisi lembap dan suhu tinggi mempercepat penyebarannya. Jika tidak dikendalikan, penyakit ini dapat menurunkan hasil panen secara signifikan. Pencegahan dapat dilakukan dengan menggunakan varietas tahan penyakit, menjaga sanitasi lahan, serta rotasi tanaman."
+   },
+   "brown_spot": {
+      "nama": "Brown Spot",
+      "deskripsi": "Brown spot disebabkan oleh jamur (Bipolaris oryzae) dan menyerang daun, batang, serta bulir padi. Gejalanya berupa bercak bundar hingga oval berwarna coklat yang kadang dikelilingi halo kuning. Penyakit ini sering muncul saat musim hujan atau di lahan dengan kesuburan rendah dan kekurangan unsur hara seperti kalium dan silika. Infeksi berat dapat menyebabkan pengurangan kualitas dan kuantitas gabah. Pengendalian mencakup pemupukan berimbang, pengeringan lahan yang baik, serta penggunaan fungisida bila diperlukan."
+   },
+   "healthy": {
+      "nama": "Healthy",
+      "deskripsi": "Tanaman padi dalam kondisi sehat menunjukkan pertumbuhan optimal tanpa gejala penyakit atau gangguan fisiologis. Daun berwarna hijau segar, batang kokoh, dan anakan berkembang dengan baik. Tanaman sehat menunjukkan respons baik terhadap pemupukan, irigasi, dan sinar matahari. Keadaan ini dicapai melalui pengelolaan budidaya yang baik, seperti penggunaan benih unggul, pengendalian hama-penyakit secara terpadu, serta pemeliharaan kebersihan lahan."
+   },
+   "leaf_blast": {
+      "nama": "Leaf Blast",
+      "deskripsi": "Leaf blast disebabkan oleh jamur (Pyricularia oryzae) dan merupakan salah satu penyakit utama pada padi. Gejalanya dimulai dari bercak kecil berbentuk belah ketupat berwarna abu-abu atau putih di tengah dengan tepi coklat. Serangan parah bisa menyebabkan daun kering dan mati. Penyakit ini menyebar cepat pada musim hujan dengan kelembapan tinggi dan suhu hangat. Pengendalian dilakukan dengan varietas tahan blast, jarak tanam ideal, serta pengurangan pemupukan nitrogen berlebih yang memicu pertumbuhan patogen."
+   },
+   "leaf_scald": {
+      "nama": "Leaf scald",
+      "deskripsi": "Leaf scald disebabkan oleh jamur (Microdochium oryzae) dan menyerang bagian tengah daun. Gejalanya berupa bercak lonjong keabu-abuan dengan tepi kecoklatan yang meluas sejajar tulang daun. Dalam kondisi basah dan kelembapan tinggi, penyakit berkembang pesat dan dapat menurunkan efisiensi fotosintesis. Penyebaran terjadi melalui spora yang terbawa angin dan air. Pencegahan dilakukan dengan pemantauan rutin, drainase yang baik, dan penggunaan fungisida bila diperlukan."
+   },
+   "narrow_brown_spot": {
+      "nama": "narrow brown spot",
+      "deskripsi": "Narrow brown spot disebabkan oleh jamur (Cercospora oryzae). Gejalanya muncul sebagai bercak sempit berwarna coklat gelap yang memanjang mengikuti arah serat daun. Bercak ini sering menyebabkan penurunan kemampuan fotosintesis, terutama jika menyerang daun bendera. Penyakit berkembang pesat di lahan yang kurang sinar matahari dan drainase buruk. Pencegahan dilakukan melalui penanaman varietas tahan, rotasi tanaman, serta pemupukan yang sesuai untuk memperkuat ketahanan tanaman."
+   }
 }
