camera, fix bahasa, dialog hapus

--- a/assets/translations/id.json
+++ b/assets/translations/id.json
@@ -11,6 +11,7 @@
    "berhasil_diubah": "Bahasa berhasil diubah",
    "riwayat": "Riwayat",
    "beranda": "Beranda",
+   "yakin_hapus_item_ini": "Apakah Anda yakin ingin menghapus item ini?",
    "pengaturan": "Pengaturan",
    "hapus_riwayat": "Hapus Riwayat",
    "konfirmasi_hapus": "Apakah Anda yakin ingin menghapus item ini?",
