--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -12,6 +12,7 @@
     "pengaturan": "Setting",
     "riwayat": "History",
     "hapus_riwayat": "Delete History",
+    "yakin_hapus_item_ini": "Are you sure you want to delete this item?",
     "konfirmasi_hapus": "Are you sure you want to delete this item?",
     "batal": "Cancel",
     "hapus": "Delete",
